# services/catalogue-service/product/product.routes.ts
@@ -4,7 +4,7 @@ import { validateBody } from '../utils/http/validate';
 import { container } from '../utils/di/container';
 import { TYPES } from '../utils/di/types';
 import { ProductController } from './product.controller';
-import { createProductSchema } from './product.schema';
+import { addProductImageSchema, createProductSchema } from './product.schema';
 
 export const productRouter = Router();
 
@@ -14,3 +14,8 @@ productRouter.get('/', asyncHandler(controller.list));
 productRouter.get('/:id', asyncHandler(controller.get));
 productRouter.post('/', validateBody(createProductSchema), asyncHandler(controller.create));
 productRouter.delete('/:id', asyncHandler(controller.remove));
+productRouter.post(
+  '/:id/images',
+  validateBody(addProductImageSchema),
+  asyncHandler(controller.addImage),
+);
